--- a/src/assets/scss/page/interviewers.scss
+++ b/src/assets/scss/page/interviewers.scss
@@ -13,9 +13,25 @@
         width: 300px;
         text-align: left;
       }
+      th:last-child{
+        text-align: center;
+      }
       td{
         text-align: left;
         padding: 6px;
+      }
+      td:last-child{
+        text-align: center;
+        span{
+          cursor: pointer;
+          color: $theme;
+          &:hover{
+            color: $danger;
+          }
+        }
+        span:last-child{
+          margin-left: 16px;
+        }
       }
     }
   }
