--- a/src/assets/scss/page/app.scss
+++ b/src/assets/scss/page/app.scss
@@ -22,6 +22,7 @@
         display: inline-block;
         padding: 0 20px;
         height: 60px;
+        color: $white;
         &:hover{
           background-color: $white;
           color: $theme;
