1.学习了部分flex布局，感觉很cool。。。

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,3 +3,8 @@
 @import "base/normalize";
 @import "base/variable";
 @import "base/fn";
+//垂直水平居中-两端对齐
+.f-justifyAndAlign-center{
+  justify-content:space-between;
+  align-items: center;
+}
