component father and children send data.study

--- a/src/assets/scss/page/app.scss
+++ b/src/assets/scss/page/app.scss
@@ -10,9 +10,9 @@
       width: 100px;
       height: 60px;
       display: inline-block;
-      background-image: url("/src/assets/image/logo.png");
+    /*  background-image: url("/src/assets/image/logo.png");
       background-repeat: no-repeat;
-      background-position: center center;
+      background-position: center center;*/
       vertical-align: middle;
     }
     .title-left-panel{
